--- a/index.html
+++ b/index.html
@@ -422,22 +422,35 @@ var enlargeTinyBlocks = function(root) {
 var display = function(root) {
 	nodes = partition.nodes(root);
 	
+	// Zoom doesn't work
+	// var zoomListener = d3.behavior.zoom()
+	// 	.scaleExtent([1, 3])
+	// 	.on("zoom", zoomHandler);
+	
 	var g = vis.selectAll("g")
 		.data(nodes)
 		.enter().append("svg:g")
 		.attr("transform", function(d) { return "translate(" + x(d.y) + "," + y(d.x) + ")"; })
 		.on("click", click);
+	
+	// zoomListener(g);
 
 	var kx = w / root.dx,
 		ky = h / 1;
 	
 	var nodeLabel = function(d) {
-		if (d.sizeForLabel) {
-			return d.name + ": " + toHex(d.sizeForLabel) + " (not to scale)";
+		var label = d.name;
+		
+		if (typeof(d.origin) == "number" && typeof(d.end) == "number") {
+			label += ": ";
+			var realSize = toHex(d.end - d.origin);
+			label += realSize;
 		}
-		else {
-			return d.name + ": " + toHex(d.value);
+		else if (typeof(d.size) == "number") {
+			label += ": " + toHex(d.size);
 		}
+		
+		return label;
 	};
 
 	g.append("svg:rect")
@@ -445,24 +458,27 @@ var display = function(root) {
 		.attr("height", function(d) { return d.dx * ky; })
 		.attr("class", function(d) { return d.children ? "parent" : "child"; });
 
-	// End
+	// End, top left
 	g.append("svg:text")
+		.attr("class", "end")
 		.attr("transform", function(d) { return "translate(4,10)"; })
 		.attr("dy", ".35em")
 		.style("opacity", function(d) { return d.dx * ky > 12 ? 1 : 0; })
 		.style("font-size", "1em")
 		.text(function(d) { return toHex(d.end); });
 	
-	// Label
+	// Label, middle
 	g.append("svg:text")
+		.attr("class", "label")
 		.attr("transform", function(d) { return "translate(16," + d.dx * ky / 2 + ")"; })
 		.attr("dy", ".35em")
 		.style("opacity", function(d) { return d.dx * ky > 12 ? 1 : 0; })
 		.style("font-size", "1em")
 		.text(nodeLabel);
 	
-	// Origin
+	// Origin, bottom left
 	g.append("svg:text")
+		.attr("class", "origin")
 		.attr("transform", function(d) { return "translate(4," + ((d.dx * ky) - 10) + ")"; })
 		.attr("dy", ".35em")
 		.style("opacity", function(d) { return d.dx * ky > 12 ? 1 : 0; })
@@ -476,6 +492,7 @@ var display = function(root) {
 	function click(d) {
 		if (!d.children) return;
 
+		// Leave a margin of 40 on the left so we can click back
 		kx = (d.y ? w - 40 : w) / (1 - d.y);
 		ky = h / d.dx;
 		x.domain([d.y, 1]).range([d.y ? 40 : 0, w]);
@@ -488,14 +505,28 @@ var display = function(root) {
 		t.select("rect")
 			.attr("width", d.dy * kx)
 			.attr("height", function(d) { return d.dx * ky; });
+		
+		// End, top left
+		t.select("text.end")
+			.attr("transform", function(d) { return "translate(4,10)"; })
+			.style("opacity", function(d) { return d.dx * ky > 12 ? 1 : 0; });
 
-		// TODO: Scale end, label and origin
-		// t.select("text")
-		// 	.attr("transform", function(d) { return "translate(12," + d.dx * ky / 2 + ")"; })
-		// 	.style("opacity", function(d) { return d.dx * ky > 12 ? 1 : 0; });
+		// Label, middle
+		t.select("text.label")
+			.attr("transform", function(d) { return "translate(16," + d.dx * ky / 2 + ")"; })
+			.style("opacity", function(d) { return d.dx * ky > 12 ? 1 : 0; });
+
+		// Origin, bottom left
+		t.select("text.origin")
+			.attr("transform", function(d) { return "translate(4," + ((d.dx * ky) - 10) + ")"; })
+			.style("opacity", function(d) { return d.dx * ky > 12 ? 1 : 0; });
 
 		d3.event.stopPropagation();
 	}
+	
+	// function zoomHandler() {
+	// 	vis.attr("transform", "translate(" + d3.event.translate + ")scale(" + d3.event.scale + ")");
+	// }
 };
 
 var isSourceLine = function(cells) {
