--- a/index.html
+++ b/index.html
@@ -554,14 +554,15 @@ var display = function(root) {
 			var realSize = d.end - d.origin;
 			
 			if (d.value > d.declaredSize) {
-				label += "Overflowed from " + toHex(d.declaredSize) + " to " + toHex(d.value);
+				label += "Overflowed from " + toHex(d.declaredSize) + " (" + toReadbleBytes(d.declaredSize)
+						+ ") to " + toHex(d.value) + " (" + toReadbleBytes(d.value) + ")";
 			}
 			else {
-				label += toHex(realSize);
+				label += toHex(realSize) + " (" + toReadbleBytes(realSize) + ")";
 			}
 		}
 		else if (typeof(d.size) == "number") {
-			label += ": " + toHex(d.size);
+			label += ": " + toHex(d.size) + " (" + toReadbleBytes(d.size) + ")";
 		}
 		
 		return label;
@@ -692,6 +693,35 @@ var toHex = function(value) {
 	if (isNaN(value)) return value;
 	
 	return "0x" + value.toString(16).toUpperCase();
+};
+
+var toReadbleBytes = function(value) {
+	if (!value) return value;
+	
+	if (isNaN(value)) return value;
+	
+	var bytes = "";
+	
+	if (value >= 1024 * 1024 * 1024) {
+		bytes = (value / (1024 * 1024 * 1024)).toFixed(0) + ' GB';
+	}
+	else if (value >= 1024 * 1024) {
+		bytes = (value / (1024 * 1024)).toFixed(0) + ' MB';
+	}
+    else if (value >= 1024) {
+    	bytes = (value / 1024).toFixed(0) + ' KB';
+    }
+    else if (value > 1) {
+    	bytes = value + ' bytes';
+    }
+    else if (value == 1) {
+    	bytes = '1 byte';
+    }
+    else {
+    	bytes = '0 bytes';
+	}
+	
+    return bytes;
 };
 
 var sortByOrigin = function(a, b) {
