--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ limitations under the License.
 <p id="error">&nbsp;</p>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
-<script src="http://d3js.org/d3.v3.min.js" type="text/javascript"></script>
+<script src="https://d3js.org/d3.v3.min.js" type="text/javascript"></script>
 <script>
 
 var SORT_CHUNKS_BY_SIZE = false;
